--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,9 @@ spring:
     url: jdbc:mysql://localhost:3306/hotel
     username: root
     password: orilore
+  servlet:
+    multipart:
+      max-file-size: 2097152
+      max-request-size: 20971520
 mybatis:
   config-location: classpath:mybatis.xml    
